--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,18 @@
 alembic==1.4.3
 Babel==2.8.0
+blinker==1.4
 click==7.1.2
+dnspython==2.0.0
+email-validator==1.1.1
 Flask==1.1.2
 Flask-Babel==2.0.0
 Flask-Login==0.5.0
+Flask-Mail==0.9.1
 Flask-Migrate==2.5.3
 Flask-SocketIO==4.3.1
 Flask-SQLAlchemy==2.4.4
 Flask-WTF==0.14.3
+idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.2
 Mako==1.1.3
